# audlyrics

./: .gitignore  AudLyrics.desktop  Cargo.toml  PKGBUILD  README.md  arch-install.sh  audlyrics  metadata.json
contents/ui/: main.qml
server/: Cargo.toml
server/src/: aud_inter.rs  lib.rs  lyrics.rs  main.rs
src/: main.rs
