[package]
name = "audlyrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
derive_more ={ version = "0.99.0", features = ["from"] }

[profile.release]
lto = true
